--- a/SharedForms/ChatForm.resx
+++ b/SharedForms/ChatForm.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="chatListSubItem2.HeadImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="chatListSubItem1.HeadImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAgBJREFUWEft
         VctNw0AQTQmUQAk5EJsjJdABlEAHpITc7HBJSnAH0AF0kBLgaJtDmPc8G3ud2WWlJEgRedKTnPnv7M5k
@@ -141,6 +141,166 @@
   <metadata name="SysMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>511, 17</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>616, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
+        IgAAAk1TRnQBSQFMAgEBAwEAASgBAAEoAQABIAEAASABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAGA
+        AwABIAMAAQEBAAEgBgABQP8AHwADDAEQAkcBRgGAAxcBIFgAA0ABcAMyAVD/AJUAAxcBIAH5AZgBMgH/
+        AkwBSwGQVAADDAEQAfkBmAEyAf8BUwJRAaD/AJkAAWMBXQFXAcABrwF9AUUB8AMXASBQAAJMAUsBkAH5
+        AZgBMgH/AyoBQMAAAyEBMAMqAUADKgFAAyEBMMgAAyoBQAH5AZgBMgH/AWMBXQFXAcBMAAMqAUAB+QGY
+        ATIB/wFYAVYBVAGvsAACOgE5AWABUwJRAaABcQFlAVcB0AH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8BcQFlAVcB0AFTAlEBoAI6ATkBYEAA
+        AyoBQAMqAUADKgFAAyoBQAMqAUADKgFAAyoBQAMqAUADKgFAAyoBQAMqAUADKgFAAyoBQAMqAUADKgFA
+        AyoBQAMqAUADKgFAAyoBQCwAAkcBRgGAAfkBmAEyAf8BUwJRAaBEAAMhATABrwF9AUUB8AGvAX4BSAHv
+        AwwBEKwAA0ABcAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8DQAFwPAABjAFxAVQB4AJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJG
+        AUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwJGAUUBfwFw
+        AWQBWAHPMAABUwJRAaAB+QGYATIB/wFTAlEBoAMMARA4AAMqAUABrwF9AUUB8AGvAX4BSAHvAyEBMJwA
+        AzIBUAJHAUYBgAFYAVYBUwGwAWMBXQFXAcACTAFLAZACRwFGAYAB+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AkcBRgGAAkwBSwGQAWMBXQFXAcABWAFWAVMBsAJH
+        AUYBgAMyAVAQAAMXASADKgFAAyoBQAMqAUADKgFAAwwBEAFjAV0BVwHARAABYwFdAVcBwAMMARADKgFA
+        AyoBQAMqAUADFwEgIAABUwJRAaAB+QGYATIB/wGMAXEBVAHgAyoBQCwAAwwBEAJMAUsBkAH5AZgBMgH/
+        Aa8BfgFIAe8DIQEwnAABcQFlAVcB0AH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AWMBXQFX
+        AcACRwFGAYAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AkcBRgGAAWMBXQFXAcAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wFxAWUBVwHQDAACOgE5
+        AWABWAFWAVQBrwJGAUUBfwJGAUUBfwJGAUUBfwMXASACRwFGAYADMgFQPAADMgFQA0ABcAMXASACRgFF
+        AX8CRgFFAX8CUQFQAZ8CRwFGAYAkAAI6ATkBYAGvAX4BSAHvAfkBmAEyAf8BYwFdAVcBwAMyAVAcAAMX
+        ASACRwFGAYABrwF9AUUB8AH5AZgBMgH/AWMBXQFXAb8DDAEQoAAB+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AWMBXQFXAcACRwFGAYAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AkcBRgGAAWMBXQFXAcAB+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/DAADKgFAAkwBSwGQEAADFwEgAWMBXQFXAcA8AAFYAVYBUwGwAwwBEAwA
+        AjoBOQFgAjoBOQFgKAADDAEQAlEBUAGfAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AWMBXQFXAcABWAFW
+        AVMBsAJHAUYBgAJMAUsBkAFjAV0BVwHAAYwBcQFUAeAB+QGYATIB/wH5AZgBMgH/AXABZAFYAc8DMgFQ
+        qAAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AWMBXQFXAcACRwFGAYAB+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AkcBRgGAAWMBXQFX
+        AcAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/EAABYwFdAVcBwAMMARAQAAI6
+        ATkBYAFTAlEBoDQAAVMCUQGgAjoBOQFgEAABYwFdAVcBwAMMARAwAAMhATABrwF+AUgB7wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8BUwJR
+        AaCwAAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8BYwFdAVcBwAJHAUYBgAH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8CRwFGAYABYwFd
+        AVcBwAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8QAAMhATABYwFdAVcBwAMM
+        ARAQAAJMAUsBkAFTAlEBoCgAAwwBEAFTAlEBoAI6ATkBYBAAAVMCUQGgAzIBUCwAAwwBEAJMAUsBkAH5
+        AZgBMgH/AfkBmAEyAf8BYwFdAVcBvwJGAUUBfwMxAU8DFwEgAyoBQAM5AV8CRgFFAX8BhwFuAVMB3wH5
+        AZgBMgH/AYwBcQFUAeADKgFAqAABcQFlAVcB0AH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8DKgFAAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wMqAUAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AXABZAFYAc8UAAMh
+        ATABcQFlAVcB0AI6ATkBYBAAAzIBUAFjAV0BVwHAAkcBRgGAAwwBEBQAAwwBEAI6ATkBYAFjAV0BVwHA
+        AzIBUAwAAyoBQAFYAVYBUwGwAjoBOQFgLAADIQEwAa8BfQFFAfAB+QGYATIB/wFwAWQBWAHPAyEBMBwA
+        AwwBEAJGAUUBfwGvAX4BSAHvAfkBmAEyAf8BUwJRAaCkAAFjAV0BVwHAAfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wMyAVAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AzIBUAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8BWAFWAVMBsBgAAwwBEAJGAUUBfwFxAWUBVwHQAyoBQBAAAjoBOQFgAWMBXQFXAb8CTAFLAZAIAAMh
+        ATABWAFWAVMBsAFYAVYBUwGwAzkBXwwAAxcBIAFjAV0BVwHAAkYBRQF/AwwBECwAAwwBEAGMAXEBVAHg
+        AfkBmAEyAf8CRgFFAX8sAAMMARABcAFkAVgBzwH5AZgBMgH/A0ABcKAAAjoBOQFgAfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wNAAXABYwFdAVcBwAH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wFjAV0BVwG/A0ABcAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8COgE5AWAgAAI6ATkBYAJHAUYBgBgAAVgBVgFTAbADDAEQBAABWAFWAVMBsAMMARAUAAI6
+        ATkBYANAAXA0AAFxAWUBVwHQAfkBmAEyAf8CRwFGAYA0AAMhATABrwF+AUgB7wH5AZgBMgH/AzIBUKAA
+        AXEBZQFXAdAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8BWAFWAVMBsAFjAV0BVwHAAzIBUAH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8BcAFkAVgBzwFwAWQBWAHPAfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wMyAVABcQFlAVcB0AFjAV0BVwHAAfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AXABZAFYAc8gAAJMAUsBkAFTAlEBoAMMARAUAANAAXABWAFWAVMBsAgAAkwBSwGQ
+        A0ABcBgAAkcBRgGAAVgBVgFTAbAsAAI6ATkBYAH5AZgBMgH/AXABZAFYAc88AAMhATAB+QGYATIB/wGM
+        AXEBVAHgoAADDAEQAXABZAFYAc8B+QGYATIB/wJRAVABnwFxAWUBVwHQA0ABcAFTAlEBoAI6ATkBYAH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wGvAX4BSAHvAVgBVgFTAbABWAFWAVMBsAGvAX4BSAHvAfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AjoBOQFgAVMCUQGgAjoBOQFgAXABZAFYAc8BUwJRAaAB+QGYATIB/wFw
+        AWQBWAHPAwwBEBwAA0ABcANAAXAUAAMMARABYwFdAVcBwAJAAT8BbxAAAkcBRgGAAVMCUQGgGAACOgE5
+        AWACTAFLAZAoAAFjAV0BVwHAAfkBmAEyAf8DIQEwQAABUwJRAaAB+QGYATIB/wMqAUCkAAI6ATkBYAMM
+        ARABWAFWAVMBsAMhATADMgFQBAADQAFwAa8BfgFIAe8B+QGYATIB/wMyAVACTAFLAZABUwJRAaADMgFQ
+        AfkBmAEyAf8BrwF+AUgB7wNAAXAEAAMyAVADFwEgAVgBVgFTAbADDAEQAzkBXyQAAWMBXQFXAcAYAAFT
+        AlEBoAMqAUAYAANAAXACRwFGAYAYAAFYAVYBUwGwAxcBICAAAyEBMAH5AZgBMgH/AVgBVgFTAbBEAAMq
+        AUAB+QGYATIB/wFYAVYBUwGwpAADDAEQA0ABcAFjAV0BVwHAAVMCUQGgAyoBQAgAAxcBIAI6ATkBYAQA
+        AkcBRgGAAkcBRgGABAADQAFwAxcBIAgAAyoBQAFTAlEBoAFjAV0BVwHAA0ABcAMMARAgAAMXASACTAFL
+        AZAUAAMhATACTAFLAZAgAAFjAV0BVwHAAwwBEBQAAkcBRgGAAyoBQCAAAyoBQAH5AZgBMgH/AkcBRgGA
+        RAADKgFAAa8BfQFFAfABYwFdAVcBwKAAAwwBEAFxAWUBVwHQAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8DMgFQDAADMgFQAkcBRgGAAkcBRgGAAzIBUAwAAzIBUAH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AXEBZQFXAdADDAEQHAADDAEQAVMCUQGgFAABUwJRAaADFwEgIAADMgFQA0ABcBQA
+        AkcBRgGAAyoBQCAAAkcBRgGAAfkBmAEyAf8DKgFABAADMgFQAkwBSwGQAWMBXQFXAcABYwFdAVcBwAFj
+        AV0BVwHAAkwBSwGQAzIBUBgAAxcBIAFTAlEBoAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        oAADQAFwAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wGvAX0BRQHwBAADDAEQ
+        AXEBZQFXAdAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wFjAV0BVwHAAwwBEAQAAa8BfQFF
+        AfAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/A0ABcCAAAXEBZQFXAdAUAAFj
+        AV0BVwHAJAADDAEQAVMCUQGgFAABYwFdAVcBwAMMARAgAAJHAUYBgAH5AZgBMgH/AjoBOQFgAYwBcQFU
+        AeAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wGM
+        AXEBVAHgAyoBQAwAA0ABcAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/6AAAWMBXQFXAcAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8DIQEwAXEBZQFXAdAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8BcQFlAVcB0AMhATAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8BYwFdAVcBwCAAA0ABcANAAXAQAAFjAV0BVwHAKAABYwFdAVcBwBAAAzIBUAJMAUsBkCQAAkcBRgGA
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/A0ABcAQAA0ABcAH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/oAABWAFWAVMBsAH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wNAAXAB+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/A0ABcAH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wFYAVYBUwGwJAACRwFGAYABWAFW
+        AVMBsAMyAVADKgFAAyEBMAFTAlEBoAMXASAgAAMhATACRwFGAYADIQEwAyoBQAMqAUACTAFLAZABWAFW
+        AVMBsAMMARAkAAJHAUYBgAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AWMBXQFXAcAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/oAACOgE5AWAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AXABZAFYAc8CTAFLAZAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AkwBSwGQAXEBZQFXAdAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AjoBOQFgKAADIQEwAkABPwFvAkYBRQF/AyoBQAI6ATkBYAJHAUYBgCAAAVMCUQGg
+        AyEBMAMXASACRgFFAX8CQAE/AW8DIQEwLAADMgFQAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AWMBXQFXAcCkAAFTAlEBoAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wGH
+        AW4BUwHfAyEBMAFjAV0BVwHAAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wFYAVYBUwGwAyEBMAGHAW4BUwHfAfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AlEBUAGfQAABYwFdAVcBwAMXASAYAAMhATABYwFdAVcBwEQAAa8BfQFFAfAB+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/A0ABcKgAAyEBMAJGAUUBfwM5AV8DDAEQBAACRwFG
+        AYAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AkcBRgGABAADDAEQAzkBXwJGAUUBfwMhATBEAAMXASABYwFdAVcBwAMqAUAQAAMqAUABYwFd
+        AVcBwAMMARBEAAFTAlEBoAH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8DFwEg
+        vAADFwEgAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wMXASBcAAMMARACUQFQAZ8BYwFdAVcBwAJHAUYBgAJHAUYBgAFjAV0BVwHAAkYBRQF/
+        AwwBEEgAAwwBEAGvAX4BSAHvAfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AkcBRgGAxAACRwFGAYAB+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8CRwFGAYBsAAMhATADIQEw
+        WAACOgE5AWAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AXABZAFYAc8DDAEQyAADQAFwAYcBbgFTAd8B+QGYATIB/wH5
+        AZgBMgH/AYcBbgFTAd8DMgFQ1AACTAFLAZAB+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5
+        AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEy
+        Af8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8BrwF+AUgB7wMXASDUAAMXASADFwEg4AACRwFGAYAB+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/
+        AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wFwAWQBWAHPAxcBIP8AxQADMgFQ
+        AYcBbgFTAd8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGY
+        ATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wJMAUsBjwMMARD/ANEAAjoBOQFgAVgBVgFUAq8BfgFI
+        Ae8B+QGYATIB/wH5AZgBMgH/AfkBmAEyAf8B+QGYATIB/wFwAWQBWAHPAkYBRQF/AxcBIP8A6QADIQEw
+        AwwBELgAAUIBTQE+BwABPgMAASgDAAGAAwABIAMAAQEBAAEBBgABAhYAA/8BAAj/AeMC/wHzBAAI/wHj
+        Av8B4wQACP8B8QL/AeMEAAH/AfwBPwX/AfEC/wHHBAAB/wGAAQEB/wH+AgABPwH4Av8BhwQAAf8CAAH/
+        Af4CAAE/AfwBPwH/AQ8EAAHgAgABBwGAAv8BgQH+AR8B/AEfBAABwAIAAQMBgAF/Af8BAQH/AQcB8AE/
+        BAABwAIAAQMBngF/Af8BOQH/AYABAAH/BAABwAIAAQMBzwE/Af4BeQH/AeABAwH/BAABwAIAAQMBxwGf
+        AfgB8wH/AYABAAH/BAABwAIAAQMB4wHDAeEBxwH/AQcB8AF/BAABwAIAAQMB8AHxAYcBDwH+AR8B/AE/
+        BAABwAIAAQMC/AGfAT8B/gE/Af4BHwQAAeACAAEHAfgB+QKfAfwBfwH/AR8EAAHgAgABBwHzAeMCzwH8
+        AX8B/wGPBAAB+AEgAQQBHwH3A+cB+AL/AY8EAAH4ATIBTAEfAecBzwHzAecB+AL/AY8EAAHwARwBOAEP
+        AecBzwHzAecB+AGAAfwBDwQAAfABEAEIAQ8B9wHfAfMB5wH4AQABOAEPBAAB8AIAAQ8B8wHfAfsBzwH4
+        AQABEAEPBAAB8AIAAQ8B+AEPAfABDwH4AgABDwQAAfACAAEPAfwBDwHwAT8B+AIAAQ8EAAH4AgABHwH/
+        AucB/wH8AgABDwQAAfwBIAEEAT8B/wHjAccB/wH8AgABDwQAAf8B4AEHAv8B8AEPAf8B/AIAAR8EAAH/
+        AfABDwL/Af4BfwH/Af4CAAEfBAAB/wH4AR8G/wIAAT8EAAH/Af4Bfwb/AYABAAF/BAAJ/wHAAQAB/wQA
+        Cf8B8AEDAf8EAAr/AT8B/wQACw==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
